# internal/api/methods.go
@@ -3,17 +3,23 @@ package api
 import (
 	"context"
 
+	"github.com/opentracing/opentracing-go"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 
+	tLog "github.com/opentracing/opentracing-go/log"
 	"github.com/rs/zerolog/log"
 
 	"github.com/ozoncp/ocp-quiz-api/internal/models"
+	"github.com/ozoncp/ocp-quiz-api/internal/producer"
 	"github.com/ozoncp/ocp-quiz-api/internal/utils"
 	ocp_quiz_api "github.com/ozoncp/ocp-quiz-api/pkg/ocp-quiz-api"
 )
 
 func (s *api) CreateQuiz(ctx context.Context, req *ocp_quiz_api.CreateQuizV1Request) (*ocp_quiz_api.CreateQuizV1Response, error) {
+	span, ctx := opentracing.StartSpanFromContext(ctx, "CreateQuiz")
+	defer span.Finish()
+
 	if err := req.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
@@ -35,6 +41,8 @@ func (s *api) CreateQuiz(ctx context.Context, req *ocp_quiz_api.CreateQuizV1Requ
 		return nil, status.Error(codes.Aborted, err.Error())
 	}
 
+	s.p.Send(producer.NewEvent(ctx, quizId, producer.CreateEvent, err))
+	s.m.IncCreate(1, "CreateQuiz")
 	return &ocp_quiz_api.CreateQuizV1Response{QuizId: quizId}, nil
 }
 
@@ -90,6 +98,9 @@ func (s *api) ListQuiz(ctx context.Context, req *ocp_quiz_api.ListQuizV1Request)
 }
 
 func (s *api) RemoveQuiz(ctx context.Context, req *ocp_quiz_api.RemoveQuizV1Request) (*ocp_quiz_api.RemoveQuizV1Response, error) {
+	span, ctx := opentracing.StartSpanFromContext(ctx, "RemoveQuiz")
+	defer span.Finish()
+
 	if err := req.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
@@ -100,11 +111,16 @@ func (s *api) RemoveQuiz(ctx context.Context, req *ocp_quiz_api.RemoveQuizV1Requ
 
 	found := s.repo.RemoveEntity(ctx, req.QuizId)
 
+	s.p.Send(producer.NewEvent(ctx, req.QuizId, producer.DeleteEvent, nil))
+	s.m.IncRemove(1, "RemoveQuiz")
 	return &ocp_quiz_api.RemoveQuizV1Response{Found: found}, nil
 }
 
 // MultiCreateQuiz  Creates new Quizes and returns this IDs
 func (s *api) MultiCreateQuiz(ctx context.Context, req *ocp_quiz_api.MultiCreateQuizV1Request) (*ocp_quiz_api.MultiCreateQuizV1Response, error) {
+	span, ctx := opentracing.StartSpanFromContext(ctx, "RemoveQuiz")
+	defer span.Finish()
+
 	log.Info().Int("Count", len(req.Quizes)).Msg("MultiCreateRequestV1")
 
 	quizes := make([]models.Quiz, 0, len(req.Quizes))
@@ -123,20 +139,65 @@ func (s *api) MultiCreateQuiz(ctx context.Context, req *ocp_quiz_api.MultiCreate
 	}
 
 	ids := make([]uint64, 0, len(quizes))
-
 	for _, batch := range batches {
-		batchIds, err := s.repo.AddEntities(ctx, batch)
-
+		batchIds, err := s.writeRequestsBatch(ctx, batch)
 		if err != nil {
 			return nil, status.Error(codes.Canceled, err.Error())
 		}
-
-		for _, i := range batchIds {
-			ids = append(ids, i)
-		}
+		ids = append(ids, batchIds...)
 	}
 
+	s.m.IncCreate(uint(len(quizes)), "MultiCreateQuiz")
 	return &ocp_quiz_api.MultiCreateQuizV1Response{
 		QuizesIds: ids,
 	}, nil
+}
+
+func (s *api) writeRequestsBatch(ctx context.Context, batch []models.Quiz) ([]uint64, error) {
+	childSpan, childCtx := opentracing.StartSpanFromContext(ctx, "MultiCreateRequestV1Batch")
+	childSpan.LogFields(tLog.Int("batch_size", len(batch)))
+
+	defer childSpan.Finish()
+
+	ids, err := s.repo.AddEntities(childCtx, batch)
+	if err != nil {
+		log.Error().
+			Err(err).
+			Msgf("Failed to save requests")
+
+		return nil, err
+	}
+	for _, id := range ids {
+		s.p.Send(producer.NewEvent(ctx, id, producer.CreateEvent, nil))
+	}
+	return ids, nil
+}
+
+func (s *api) UpdateQuiz(ctx context.Context, req *ocp_quiz_api.UpdateQuizV1Request) (*ocp_quiz_api.UpdateQuizV1Response, error) {
+	span, ctx := opentracing.StartSpanFromContext(ctx, "UpdateQuiz")
+	defer span.Finish()
+
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	log.Info().
+		Uint64("Id", req.QuizId).
+		Msg("UpdateQuiz")
+
+	quiz := models.Quiz{
+		Id:          req.QuizId,
+		ClassroomId: req.ClassroomId,
+		UserId:      req.UserId,
+		Link:        req.Link,
+	}
+
+	updated, err := s.repo.UpdateEntity(ctx, quiz)
+	if err != nil {
+		return &ocp_quiz_api.UpdateQuizV1Response{Updated: false}, err
+	}
+
+	s.p.Send(producer.NewEvent(ctx, req.QuizId, producer.UpdateEvent, nil))
+	s.m.IncUpdate(1, "UpdateQuiz")
+	return &ocp_quiz_api.UpdateQuizV1Response{Updated: updated}, nil
 }
